--- a/exo2/config/packages/security.yaml
+++ b/exo2/config/packages/security.yaml
@@ -1,7 +1,6 @@
 security:
     encoders:
-        App\Entity\User:
-            algorithm: argon2i
+        FOS\UserBundle\Model\UserInterface: bcrypt
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
@@ -22,6 +21,10 @@ security:
 
             logout:
                 path: app_logout
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
