--- a/exo2remake/composer.json
+++ b/exo2remake/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "easycorp/easyadmin-bundle": "^2.2",
         "friendsofsymfony/user-bundle": "~2.0",
+        "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
